--- a/.github/workflows/extract_partitions.yml
+++ b/.github/workflows/extract_partitions.yml
@@ -91,7 +91,7 @@ jobs:
           tag_name: "extract-${{ github.run_id }}"
           name: "Extracted Partitions for ${{ env.DEVICE_MODEL || 'Unknown Device' }}"
           body: |
-            Extracted from: ${{ github.event.inputs.firmware_url }}
+           # Extracted from: ${{ github.event.inputs.firmware_url }}
             Partitions: ${{ github.event.inputs.partitions }}
           files: |
             output/*
